--- a/examples/index.html
+++ b/examples/index.html
@@ -10,7 +10,7 @@
 		.example:after,
 		.clearfix::after {
 			content: "";
-			clear: both;
+			clear:   both;
 			display: table;
 		}
 	</style>
@@ -22,57 +22,133 @@
 <script src="../dep/locale/default.js"></script>
 <script src="../src/js/datetimepicker.js"></script>
 <script type="text/javascript">
-	$(document).ready(
-		function(){
+	$(document)
+		.ready(
+			function (){
 
-			$("#date-picker1")
-				.DateTimePicker(
-					{
-						debug: false,
-						view: 'days',
-						inline: true
-					}
-				);
+				$("#date-picker1")
+					.DateTimePicker(
+						{
+							debug: false,
+							view: 'days',
+							inline: true
+						}
+					);
 
-			$("#date-picker2")
-				.DateTimePicker(
-					{
-						debug: false,
-						view: 'days',
-						formatDate: 'DD/MM/Y',
-						formatTime: null,
-						min: moment().subtract(1, "month"),
-						max: moment().add(1, "month")
-					}
-				);
+				$("#date-picker2")
+					.DateTimePicker(
+						{
+							debug: false,
+							view: 'days',
+							formatDate: 'DD/MM/Y',
+							formatTime: null,
+							min: moment()
+								.subtract(1, "month"),
+							max: moment()
+								.add(1, "month")
+						}
+					);
 
-			$("#date-picker3").DateTimePicker({
-				allow:{
-					months: 'MM/Y',
-					days: "DD/MM/Y"
-				}
-			});
-		}
-	);
+				$("#date-picker3")
+					.DateTimePicker({
+						allow: {
+							months: 'MM/Y',
+							days: "DD/MM/Y"
+						}
+					});
+
+				$(".date-range")
+					.DateTimePicker({
+						formatTime: null
+					});
+				$(".date-range")
+					.DateTimePicker(
+						"hooks",
+						{
+							"change": function (event){
+								if (this.$el.data("data-min") === void 0)
+								{
+									this.$el.data("data-min", this.options.min);
+								}
+								if (this.$el.data("data-max") === void 0)
+								{
+									this.$el.data("data-max", this.options.max);
+								}
+
+								let value = this.$el.val();
+								let $opposite = null;
+
+								if(this.$el.hasClass("data-min"))
+								{
+									$opposite = $('.date-range')
+										.filter('.data-max');
+
+									if(!value)
+									{
+										value = $opposite.data('data-min');
+									}
+
+									if (typeof value === typeof void 0)
+									{
+										value = null;
+									}
+
+									$opposite.DateTimePicker(
+										"options",
+										{
+											min: value
+										}
+									);
+								}
+
+								if(this.$el.hasClass("data-max"))
+								{
+									$opposite = $('.date-range')
+										.filter('.data-min');
+
+									if(!value)
+									{
+										value = $opposite.data('data-max');
+									}
+
+									$opposite.DateTimePicker(
+										"options",
+										{
+											max: value
+										}
+									);
+								}
+							}
+						});
+
+			}
+		);
 </script>
 
 <div class="example">
 	<h1>Example 1</h1>
 	<h2>Date + Time - Inline Selector</h2>
-	<input placeholder="Inline Date+Time Picker" id="date-picker1" type="text" />
+	<input placeholder="Inline Date+Time Picker" id="date-picker1" type="text"/>
 </div>
 
 
 <div class="example">
 	<h1>Example 2</h1>
 	<h2>Date without time limited to a month before and a month after today</h2>
-	<input placeholder="Limited Interval Picker" id="date-picker2" type="text" />
+	<input placeholder="Limited Interval Picker" id="date-picker2" type="text"/>
 </div>
 
 <div class="example">
 	<h1>Example 3</h1>
 	<h2>Date Picker - Possible outputs are months and days</h2>
-	<input placeholder="Multiple Outputs Picker" id="date-picker3" type="text" />
+	<input placeholder="Multiple Outputs Picker" id="date-picker3" type="text"/>
+</div>
+
+<div class="example">
+	<h1>Example 4</h1>
+	<h2>Date Interval Picker</h2>
+	<input placeholder="start_range" id="date-picker4-1" class="date-range data-min" type="text"/> -
+	<input placeholder="end_range" id="date-picker4-2" class="date-range data-max" type="text"/>
 </div>
 
 </body>
