hooks extended to allow multiple hooks per action

--- a/examples/index.html
+++ b/examples/index.html
@@ -170,7 +170,15 @@
 								}
 							}
 						}
-					});
+					})
+					.DateTimePicker(
+						"hooks",
+						{
+							"showCalendar": function($placeholder, view){
+								console.log($placeholder, view);
+							}
+						}
+					);
 
 			}
 		);
