--- a/examples/index.html
+++ b/examples/index.html
@@ -34,19 +34,25 @@
 				$("#date-picker1")
 					.DateTimePicker(
 						{
+							allow:{
+								months: "MM-Y",
+								days: 'DD-MM-Y'
+							},
 							debug: false,
 							view: 'days',
-							inline: true
+							inline: true,
+							timepicker: 'H:mm'
 						}
 					);
 
 				$("#date-picker2")
 					.DateTimePicker(
 						{
-							debug: false,
+							debug: true,
 							view: 'days',
-							formatDate: 'DD/MM/Y',
-							formatTime: null,
+							allow: {
+								days: 'DD/MM/Y'
+							},
 							min: moment()
 								.subtract(1, "month"),
 							max: moment()
@@ -64,7 +70,9 @@
 
 				$(".date-range")
 					.DateTimePicker({
-						formatTime: null,
+						allow:{
+							days: 'DD-MM-Y'
+						},
 						min: moment().subtract(1, "month").format("DD/MM/Y"),
 						max: moment().add(1, "month").format("DD/MM/Y"),
 						hooks: {
