- resolved an issue with `set` hook

--- a/examples/index.html
+++ b/examples/index.html
@@ -96,7 +96,7 @@
 					.DateTimePicker(
 						"hooks",
 						{
-							"set": function (event){
+							"set": function (){
 								let value = this.$el.val();
 								let $opposite = null;
 
