- `blur` event now enhanced: previous input and time changes won't cause issues when hiding the widget

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,6 +18,15 @@
 			color:       #FF0000;
 			font-weight: bold;
 		}
+
+		.now-button{
+			padding: 5px;
+			margin: 0 10px;
+			color: white;
+			background: darkgreen;
+			border-collapse: collapse;
+			border: 1px solid lightgreen;
+		}
 	</style>
 </head>
 <body>
@@ -234,7 +243,7 @@
 						buttons:[
 							$.DateTimePicker.DefaultButtons.dayBegin,
 							"<br/>",
-							$.DateTimePicker.DefaultButtons.now
+							$.DateTimePicker.DefaultButtons.now.setOptions({className: 'now-button'})
 						]
 					});
 
